# ml_service

./: .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  lil_tester.py  pyproject.toml
.dvc/: config
api/: main.py
app/: functions.py  http_status.py  minio_functions.py  service_pb2.py  service_pb2_grpc.py
grpc/: functions.py  grpc_test.py  main.py  model_service_client.py  service.proto  service_pb2_grpc.py
tests/: api_test.py  grpc_test.py
