[tool.poetry]
name = "ml-service"
version = "0.1.0"
description = ""
authors = ["MikhailPotter <mikhail.potter@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.105.0"
lightgbm = "^4.1.0"
pydantic = "^2.5.2"
uvicorn = "^0.24.0.post1"
catboost = "^1.2.2"
black = "^23.12.0"
grpcio = "^1.60.0"
dvc = "^3.34.0"
google = "^3.0.0"
dvc-s3 = "^3.0.1"
protobuf = "^4.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"